# miband8-rs

./: Cargo.toml  README.md  build.rs
src/: main.rs  protocol.rs
