[package]
name = "miband8-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
bluer = { version = "0.17.1", features = ["full"] }
ccm = "0.5.0"
env_logger = "0.11.3"
futures = "0.3.30"
hmac = "0.12.1"
prost = "0.12.6"
sha2 = "0.10.8"
tokio = { version = "1.37.0", features = ["rt", "macros"] }
uuid = "1.8.0"

[build-dependencies]
prost-build = "0.12.6"
